# ds-provider-xledger-py-lib

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  PyPI.md  README.md  pyproject.toml  setup-template.sh
.config/: pytest.ini  ruff.toml
.github/workflows/: ci.yaml  release.yaml
docs/source/: conf.py  index.rst
examples/: 01_linked_service_connect.py  02_dataset_read.py  03_dataset_create.py  04_dataset_update.py  05_dataset_delete.py
src/ds_provider_xledger_py_lib/: __init__.py  enums.py  errors.py  resource.yaml
src/ds_provider_xledger_py_lib/assets/absences/read/: metadata.json  query.graphql
src/ds_provider_xledger_py_lib/assets/accountBalances/read/: metadata.json  query.graphql
src/ds_provider_xledger_py_lib/assets/accounts/read/: metadata.json  query.graphql
src/ds_provider_xledger_py_lib/assets/apTransactions/read/: metadata.json  query.graphql
src/ds_provider_xledger_py_lib/dataset/: __init__.py  xledger.py
src/ds_provider_xledger_py_lib/dataset/engines/: __init__.py  _read_checkpoint.py  _read_incremental.py  read.py
src/ds_provider_xledger_py_lib/linked_service/: __init__.py  xledger.py
src/ds_provider_xledger_py_lib/serde/: __init__.py  deserializer.py  serializer.py
src/ds_provider_xledger_py_lib/utils/: __init__.py  dataframe.py  graphql.py  introspection.py  query_builder.py  rules.py
src/{package_name}/: __init__.py
tests/: __init__.py  conftest.py  test_enums.py  test_errors.py  test_graphql_utils.py  test_linked_service.py  test_version.py
tests/assets/: __init__.py  test_assets_contract.py
tests/dataset/: __init__.py  test_xledger_dataset.py
tests/dataset/engines/: __init__.py  test_read_engine.py  test_read_incremental.py
tests/linked_service/: __init__.py  test_xledger.py
tests/serde/: __init__.py  test_deserializer.py  test_serializer.py
tests/utils/: __init__.py  test_dataframe.py  test_introspection.py  test_introspection_additional.py  test_query_builder.py  test_rules.py
(+164 files in other folders)
